<resources>
    <string name="app_name">NewsAppJetpack</string>

    <string name="short_news_title_1">Grizzlies thrash Thunder by NBA-record 73 points</string>
    <string name="short_news_text_1">The Grizzlies dropped 152 points en route to the biggest blowout win in NBA history — and the basketball world noticedThe Grizzlies dropped 152 points en route to the biggest blowout win in NBA history — and the basketball world noticed</string>
    <string name="short_news_url_1">https://a.espncdn.com/media/motion/2021/1202/dm_211202_Grizzlies_thrash_Thunder_by_NBA_record_73_points/dm_211202_Grizzlies_thrash_Thunder_by_NBA_record_73_points.jpg</string>
    <string name="short_news_date_1">03/12/2021</string>

    <string name="short_news_title_2">Chauncey Billups said he was concerned by his team</string>
    <string name="short_news_text_2">Chauncey Billups said he was concerned by his team\'s lack of competitiveness in Thursday\'s 114–83 loss to the SpursChauncey Billups said he was concerned by his team\'s lack of competitiveness in Thursday\'s 114–83 loss to the Spurs</string>
    <string name="short_news_url_2">https://a.espncdn.com/photo/2021/1203/r945898_600x600_1-1.jpg</string>
    <string name="short_news_date_2">02/12/2021</string>

    <string name="large_news_title_1">The Cleveland Cavaliers are quietly sneaking up the Eastern Conference standings</string>
    <string name="large_news_text_1">No fluke! The Cleveland Cavaliers, behind 21-year-old Darius Garland and their No. 3-ranked defense, are quietly sneaking up the Eastern Conference standingsNo fluke! The Cleveland Cavaliers, behind 21-year-old Darius Garland and their No. 3-ranked defense, are quietly sneaking up the Eastern</string>
    <string name="large_news_url_1">https://a.espncdn.com/media/motion/2021/1203/ss_20211202_223743439_182715218/ss_20211202_223743439_182715218.jpg</string>
    <string name="large_news_date_1">01/12/2021</string>

    <string name="large_news_title_2">San Antonio Spurs extended their winning streak to a season-high three games</string>
    <string name="large_news_text_2">Bryn Forbes had 18 points off the bench and the San Antonio Spurs extended their winning streak to a season–high three games with a 114–83 victory over the shorthanded Portland Trail Blazers on Thursday night.Bryn Forbes had 18 points off the bench and the San Antonio Spurs extended their winning streak to a season–high three games with a 114–83 victory over the shorthanded Portland Trail Blazers on Thursday night</string>
    <string name="large_news_url_2">https://a.espncdn.com/media/motion/2021/1203/ss_20211202_223743439_182715218/ss_20211202_223743439_182715218.jpg</string>
    <string name="large_news_date_2">03/12/2021</string>

    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="preferences">Preferences</string>
    <string name="headlines">Headlines</string>
    <string name="nba">NBA</string>
    <string name="username">Can Önal</string>
    <string name="widget_description">Hear the latest news around the league</string>

    <string name="short_news_image">short news image</string>
    <string name="large_news_image">large news image</string>
    <string name="detail_news_image">detail news image</string>
    <string name="toolbar_nba_image">toolbar nba image</string>
    <string name="profile_image">profile image</string>

    <string name="preference_notifications_key">notifications</string>
    <string name="preference_notifications_title">Enable message notifications</string>
    <string name="preference_feedback_key">feedback</string>
    <string name="preference_feedback_title">Send feedback</string>
    <string name="preference_feedback_summary">Report technical issues or suggest new features</string>
    <string name="preference_about_key">about</string>
    <string name="preference_about_title">About</string>
    <string name="preference_about_summary">Information about the app and developer</string>
    <string name="preference_email_key">email</string>
    <string name="preference_email_title">Change your e-mail address</string>
    <string name="preference_subscription_key">subscription</string>
    <string name="preference_subscription_title">Manage subscription</string>

</resources>